Reescreve codigo para comandos mais simples